# CMake_Template

./: .gitignore  CMakeLists.txt  readme.md
docs/: CMakeLists.txt  Doxyfile
libs/: CMakeLists.txt
libs/include/lib1/: lib1.h
libs/include/lib2/: lib2.h
libs/lib/lib1/: CMakeLists.txt  lib1.c
libs/lib/lib2/: CMakeLists.txt  lib2.c
src/: main.c  project_conf.h.in
